feat: write embeddings in batches via api, add job

--- a/k8s/chat-bot/Dockerfile
+++ b/k8s/chat-bot/Dockerfile
@@ -7,8 +7,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 WORKDIR /app
 
 COPY app.py /app/
+COPY embeddings.npy /data/
+COPY sentences.csv /data/
 
-RUN pip3 install flask clickhouse-driver numpy transformers tritonclient[all] 
+RUN pip3 install flask clickhouse-driver numpy pandas transformers tritonclient[all] 
 
 ENV PYTHONUNBUFFERED=1
 
