--- a/k8s/chat-frontend/frontend.yaml
+++ b/k8s/chat-frontend/frontend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: chat-frontend
-        image: chat-frontend:latest
+        image: itallix/chat-frontend:latest
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5002
