fix(clickhouse): use StatefulSet instead of Deployment

--- a/k8s/clickhouse/clickhouse.yaml
+++ b/k8s/clickhouse/clickhouse.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: clickhouse
 spec:
@@ -32,6 +32,17 @@ spec:
             limits:
               memory: "2Gi"
               cpu: "1000m"
+          volumeMounts:
+            - name: clickhouse-storage
+              mountPath: /var/lib/clickhouse
+  volumeClaimTemplates:
+    - metadata:
+        name: clickhouse-storage
+      spec:
+        accessModes: [ "ReadWriteOnce" ]
+        resources:
+          requests:
+            storage: 10Gi
 ---
 apiVersion: v1
 kind: Service
